# WoWee

./: .gitignore  .gitmodules  .semgrepignore  ATTRIBUTION.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  EXPANSION_GUIDE.md  FEATURES.md  GETTING_STARTED.md  LICENSE  README.md  REMOVAL_SUMMARY.md  build.bat  build.ps1  build.sh  debug_texture.bat  debug_texture.ps1  debug_texture.sh  extract_assets.bat  extract_assets.ps1  extract_assets.sh  extract_warden_rsa.py  list_mpq  list_mpq.cpp  rebuild.bat  rebuild.ps1  rebuild.sh  test_ambient_audio.sh  test_gameobject_display.cpp  test_splash_sounds.sh  vcpkg.json
.github/: FUNDING.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  release.yml  security.yml
Data/opcodes/: aliases.json  canonical.json
assets/shaders/: basic.frag.glsl  basic.frag.spv  basic.vert  basic.vert.glsl  basic.vert.spv  celestial.frag.glsl  celestial.frag.spv  celestial.vert.glsl  celestial.vert.spv  character.frag.glsl  character.frag.spv  character.vert.glsl  character.vert.spv  character_shadow.frag.glsl  character_shadow.frag.spv  character_shadow.vert.glsl  character_shadow.vert.spv  charge_dust.frag.glsl  charge_dust.frag.spv  charge_ribbon.frag.glsl  charge_ribbon.frag.spv  charge_ribbon.vert.glsl  charge_ribbon.vert.spv  clouds.frag.glsl  clouds.frag.spv  clouds.vert.glsl  clouds.vert.spv  fsr2_accumulate.comp.glsl  fsr2_accumulate.comp.spv  fsr2_motion.comp.glsl  fsr2_motion.comp.spv  fsr2_sharpen.frag.glsl  fsr2_sharpen.frag.spv  fsr_easu.frag.glsl  fsr_easu.frag.spv  fxaa.frag.glsl  fxaa.frag.spv  lens_flare.frag.glsl  lens_flare.frag.spv  lens_flare.vert.glsl  (+90 more)
container/: build-in-container.sh  build-wowee.sh  builder-ubuntu.Dockerfile
docs/: AMD_FSR2_INTEGRATION.md  SKY_SYSTEM.md  WARDEN_COMPLETE.md  WARDEN_IMPLEMENTATION.md  WARDEN_MODULE_ARCHITECTURE.md  WARDEN_QUICK_REFERENCE.md  architecture.md  asset-pipeline-gui.md  authentication.md  commonsound_manifest.txt  quickstart.md  realm-list.md  server-setup.md  sound manifest speech-enUS.MPQ .txt  status.md
include/addons/: lua_engine.hpp
include/audio/: activity_sound_manager.hpp  ambient_sound_manager.hpp  audio_engine.hpp  combat_sound_manager.hpp  footstep_manager.hpp  mount_sound_manager.hpp  movement_sound_manager.hpp  music_manager.hpp  npc_voice_manager.hpp  spell_sound_manager.hpp  ui_sound_manager.hpp
include/auth/: auth_handler.hpp  auth_opcodes.hpp  auth_packets.hpp  crypto.hpp  integrity.hpp  pin_auth.hpp  srp.hpp  vanilla_crypt.hpp
include/core/: application.hpp  coordinates.hpp  logger.hpp  memory_monitor.hpp  window.hpp
include/game/: character.hpp  entity.hpp  expansion_profile.hpp  game_handler.hpp  group_defines.hpp  inventory.hpp  npc_manager.hpp  opcode_aliases_generated.inc  opcode_enum_generated.inc  opcode_names_generated.inc  opcode_table.hpp  opcodes.hpp  packet_parsers.hpp  spell_defines.hpp  transport_manager.hpp  update_field_table.hpp  warden_crypto.hpp  warden_emulator.hpp  warden_memory.hpp  warden_module.hpp  world_packets.hpp  zone_manager.hpp
include/network/: net_platform.hpp  packet.hpp  tcp_socket.hpp  world_socket.hpp
include/pipeline/: adt_loader.hpp  asset_manager.hpp  asset_manifest.hpp  blp_loader.hpp  dbc_layout.hpp  dbc_loader.hpp  hd_pack_manager.hpp  loose_file_reader.hpp  m2_loader.hpp  mpq_manager.hpp  wdt_loader.hpp  wmo_loader.hpp
include/platform/: process.hpp
include/rendering/: amd_fsr3_runtime.hpp  amd_fsr3_wrapper_abi.h  camera_controller.hpp  celestial.hpp  character_preview.hpp  character_renderer.hpp  charge_effect.hpp  clouds.hpp  lens_flare.hpp  levelup_effect.hpp  lighting_manager.hpp  lightning.hpp  loading_screen.hpp  m2_model_classifier.hpp  m2_renderer.hpp  minimap.hpp  mount_dust.hpp  quest_marker_renderer.hpp  renderer.hpp  scene.hpp  shader.hpp  sky_system.hpp  skybox.hpp  starfield.hpp  swim_effects.hpp  terrain_manager.hpp  terrain_renderer.hpp  video_player.hpp  vk_buffer.hpp  vk_context.hpp  vk_frame_data.hpp  vk_pipeline.hpp  vk_render_target.hpp  vk_shader.hpp  vk_texture.hpp  vk_utils.hpp  water_renderer.hpp  weather.hpp  wmo_renderer.hpp  world_map.hpp
include/ui/: auth_screen.hpp  character_create_screen.hpp  character_screen.hpp  game_screen.hpp  inventory_screen.hpp  keybinding_manager.hpp  quest_log_screen.hpp  realm_screen.hpp  spellbook_screen.hpp  talent_screen.hpp  ui_colors.hpp  ui_manager.hpp
resources/: wowee.desktop.in  wowee.rc
src/: main.cpp
src/addons/: lua_engine.cpp
src/audio/: activity_sound_manager.cpp  ambient_sound_manager.cpp  audio_engine.cpp  combat_sound_manager.cpp  footstep_manager.cpp  mount_sound_manager.cpp  movement_sound_manager.cpp  music_manager.cpp  npc_voice_manager.cpp  npc_voice_manager.cpp.old  spell_sound_manager.cpp  ui_sound_manager.cpp
src/auth/: auth_handler.cpp  auth_opcodes.cpp  auth_packets.cpp  big_num.cpp  crypto.cpp  integrity.cpp  pin_auth.cpp  srp.cpp  vanilla_crypt.cpp
src/core/: application.cpp  logger.cpp  memory_monitor.cpp  window.cpp
src/game/: character.cpp  entity.cpp  expansion_profile.cpp  game_handler.cpp  game_handler.cpp.bak  inventory.cpp  npc_manager.cpp  opcode_table.cpp  packet_parsers_classic.cpp  packet_parsers_tbc.cpp  transport_manager.cpp  update_field_table.cpp  warden_crypto.cpp  warden_emulator.cpp  warden_memory.cpp  warden_module.cpp  world.cpp  world_packets.cpp  zone_manager.cpp
src/network/: packet.cpp  tcp_socket.cpp  world_socket.cpp
src/pipeline/: adt_loader.cpp  asset_manager.cpp  asset_manifest.cpp  blp_loader.cpp  dbc_layout.cpp  dbc_loader.cpp  hd_pack_manager.cpp  loose_file_reader.cpp  m2_loader.cpp  mpq_manager.cpp  terrain_mesh.cpp  wdt_loader.cpp  wmo_loader.cpp
src/rendering/: amd_fsr3_framegen_probe.cpp  amd_fsr3_runtime.cpp  amd_fsr3_wrapper_impl.cpp  camera.cpp  camera_controller.cpp  celestial.cpp  character_preview.cpp  character_renderer.cpp  charge_effect.cpp  clouds.cpp  frustum.cpp  lens_flare.cpp  lightning.cpp  (+30 more)
tools/: asset_pipeline_gui.py  backup_assets.sh  generate_ffx_sdk_vk_permutations.sh  validate_opcode_maps.py
(+132 files in other folders)
